# finance_client

./: .gitignore  .gitmodules  __init__.py  client_base.py  client_base.test.py  position.py  positions.json  pyproject.toml  setup.py  unittest.bat
csv/: client.py
docs/: client_base_spec.md
finance_client/: __init__.py  client.py  client_base.py  db.py  enum.py  frames.py  graph.py  logger.py  logging.yaml  logging_test.yaml  market.py  position.py  settings.json  symbols.py  tool.py  utils.py  wallet.py
finance_client/coincheck/: client.py  utils.py
finance_client/csv/: README.md  client.py  files.json
finance_client/es/: client.py
finance_client/mr5/: __init__.py  client.py
profile/: profile_csv_client.py
samples/: downloads_mt5.ipynb  downloads_yfinance.ipynb  mt5_trade.ipynb  plot_trading_result.ipynb
tests/: account_test.py  alpha_vantage.test.py  alpha_vantage.text.py  client_base.test.py  client_base_test.py  coincheck.test.py  coincheck_api.test.py  coincheck_client.test.py  csv_client.test.py  db_test.py  economic_indicaters.test.py  env.test.template.json  frame.test.py  frame_test.py  graph.test.py  graph_test.py  idc_process.test.py  idc_process_test.py  indicaters.test.py  indicaters_test.py  log_db_test.py  logger_test.py  mt5_client.test.py  ohlc_util_test.py  position_test.py  positions.json  pre_process_test.py  process.test.py  rating_log_test.py  risk_manager.py  sbi_client.test.py  standalization.test.py  standalization_test.py  template.env  test_csvrw.py  test_graph.py  validation.test.py  validation_test.py  yfinance.test.py
(+144 files in other folders)
