# pyproject.toml
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_client"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "statsmodels",
    "matplotlib",
    "MetaTrader5",
    "websocket-client",
    "python-dotenv",
    "PyYAML",
    "yfinance",
    "selenium",
    "pandas_datareader",
]

[tool.black]
line-length = 150
target-version = ['py310']
include = '\.py$'

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]